# onyx-meridian

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HANDOFF.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.md
.github/workflows/: ci.yaml
deprecated-prototype/: index.html  package-lock.json  package.json  standalone.html
deprecated-prototype/src/: App.jsx  styles.css
doc/: ARCHITECTURE.md  CONNECTORS.md  IMPLEMENTATION-PLAN.md  PLATFORM-PLAN-DOSSIER.md  PLATFORM-PLAN.md  business-onboarding-and-process-decomposition.md  enterprise-ai-features.md  system-actions.md
fullstack/: README.md  package-lock.json  package.json
fullstack/client/: index.html  package.json  vite.config.js
fullstack/doc/: build.md
fullstack/server/: README.md
fullstack/shared/: constants.js
meridian/: __init__.py  main.py
meridian/adapters/: __init__.py  base.py  echo.py  registry.py
meridian/config/: settings.py
meridian/connectors/: __init__.py  base.py  loader.py  registry.py  spec.py
meridian/domain/: enums.py  lifecycle.py  task_lifecycle.py
meridian/gateway/: model_gateway.py
meridian/governance/: identity.py  policy.py
meridian/routes/: api.py  approvals.py  (+14 more)
tests/: conftest.py  test_connectors.py  test_dashboard.py  test_employees_api.py  test_governance.py  test_identity.py  test_lifecycle.py  test_registry_api.py  test_task_lifecycle.py
ui/: .env.example  README.md  index.html  package-lock.json  package.json
website/: README.md  app.js  index.html  styles.css
(+90 files in other folders)
