[project]
name = "onyx-meridian"
version = "0.1.0"
description = "Onyx Meridian control-plane spine: AI-employee registry, lifecycle, and governance."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are tolerated in docstrings/tables
